--- a/app/src/main/res/navigation/auth_navigation.xml
+++ b/app/src/main/res/navigation/auth_navigation.xml
@@ -21,7 +21,11 @@
         android:id="@+id/signupFragment"
         android:name="com.bangkit.dwicara.auth.signup.SignupFragment"
         android:label="fragment_signup"
-        tools:layout="@layout/fragment_signup" />
+        tools:layout="@layout/fragment_signup" >
+        <action
+            android:id="@+id/action_signupFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
     <fragment
         android:id="@+id/personalFragment"
         android:name="com.bangkit.dwicara.auth.login.PersonalFragment"
