--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -60,4 +60,13 @@
     <style name="OutlinedButton.Big">
         <item name="android:padding">@dimen/space_normal</item>
     </style>
+
+    <style name="OutlinedButton.Inline">
+        <item name="android:padding">0dp</item>
+        <item name="fontFamily">@font/poppins_semi_bold</item>
+        <item name="strokeWidth">0dp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:layout_width">wrap_content</item>
+    </style>
 </resources>
