--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -4,38 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".auth.login.LoginFragment">
+    tools:context=".auth.register.RegisterFragment">
 
-    <ImageView
-        android:id="@+id/iv_logo"
-        android:layout_width="31dp"
-        android:layout_height="24dp"
-        android:layout_marginTop="@dimen/space_normal"
-        android:layout_marginEnd="@dimen/space_small"
-        android:src="@drawable/ic_logo_dwicara"
-        app:layout_constraintEnd_toStartOf="@id/iv_text"
+    <Button
+        android:id="@+id/btn_back"
+        style="@style/OutlinedButton.Inline"
+        android:layout_marginStart="@dimen/space_normal"
+        android:layout_marginTop="@dimen/space_small"
+        android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
+        android:text="@string/back"
+        app:drawableTint="@color/blue_500"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/iv_text"
-        android:layout_width="76dp"
-        android:layout_height="14dp"
-        android:layout_marginEnd="@dimen/space_normal"
-        android:src="@drawable/ic_text_dwicara"
-        app:layout_constraintBottom_toBottomOf="@id/iv_logo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/iv_logo" />
-
     <TextView
-        android:id="@+id/tv_login"
+        android:id="@+id/tv_reset"
         style="@style/TextContent.Header"
         android:layout_marginHorizontal="@dimen/space_normal"
-        android:text="@string/login"
+        android:text="@string/register_account"
         app:layout_constraintBottom_toTopOf="@+id/et_email"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias="0.25"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.45"
         app:layout_constraintVertical_chainStyle="packed" />
 
     <EditText
@@ -46,13 +37,12 @@
         android:layout_marginTop="@dimen/space_normal"
         android:backgroundTint="@color/grey_500"
         android:hint="@string/enter_your_email_hint"
-        android:inputType="textEmailAddress"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/et_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_login" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_reset" />
 
     <EditText
         android:id="@+id/et_password"
@@ -60,55 +50,42 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/space_normal"
         android:layout_marginTop="@dimen/space_normal"
+        android:inputType="textPassword"
         android:backgroundTint="@color/grey_500"
         android:hint="@string/enter_your_password_hint"
-        android:inputType="textPassword"
         android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_login"
+        app:layout_constraintBottom_toTopOf="@+id/et_confirm"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_email" />
 
-    <Button
-        android:id="@+id/btn_login"
-        style="@style/Button.Big"
+    <EditText
+        android:id="@+id/et_confirm"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/space_normal"
-        android:layout_marginTop="@dimen/space_extra_large"
-        android:text="@string/login"
-        app:layout_constraintBottom_toTopOf="@+id/btn_to_register"
+        android:layout_marginTop="@dimen/space_normal"
+        android:inputType="textPassword"
+        android:backgroundTint="@color/grey_500"
+        android:hint="@string/confirm_your_password"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_register"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_password" />
 
     <Button
-        android:id="@+id/btn_to_register"
-        style="@style/OutlinedButton.Big"
+        android:id="@+id/btn_register"
+        style="@style/Button.Big"
         android:layout_marginHorizontal="@dimen/space_normal"
-        android:layout_marginTop="@dimen/space_normal"
+        android:layout_marginTop="@dimen/space_extra_large"
         android:text="@string/register"
-        app:layout_constraintBottom_toTopOf="@+id/btn_forget"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
-
-    <Button
-        android:id="@+id/btn_forget"
-        style="@style/OutlinedButton"
-        android:layout_width="wrap_content"
-        android:layout_marginTop="@dimen/space_small"
-        android:padding="@dimen/space_extra_small"
-        android:textSize="14sp"
-        android:text="@string/forgot_password"
-        android:textColor="@color/orange_500"
-        app:fontFamily="@font/poppins_regular"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_to_register"
-        app:strokeWidth="0dp"
-        app:textAllCaps="false" />
+        app:layout_constraintTop_toBottomOf="@+id/et_confirm" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
