--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,9 +19,14 @@
         <item name="android:textColor">@color/grey_900</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">12sp</item>
     </style>
 
+    <style name="TextContent.Highlight">
+        <item name="fontFamily">@font/poppins_semi_bold</item>
+        <item name="android:textColor">@color/grey_900</item>
+    </style>
+    
     <style name="TextContent.Header">
         <item name="android:textSize">20sp</item>
         <item name="fontFamily">@font/poppins_semi_bold</item>
