--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,62 +1,190 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".home.HomeFragment">
 
-    <View
-        android:id="@+id/v_header"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="62dp"
-        android:background="@color/blue_500"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="wrap_content">
 
-    <Button
-        android:id="@+id/btn_search"
-        style="@style/OutlinedButton"
-        android:layout_marginHorizontal="@dimen/space_normal"
-        android:backgroundTint="@color/grey_200"
-        android:drawableEnd="@drawable/ic_baseline_search_24"
-        android:padding="@dimen/space_extra_small"
-        android:paddingStart="@dimen/space_normal"
-        android:paddingEnd="@dimen/space_normal"
-        android:text="@string/find_your_friend_by_id_here"
-        android:textAlignment="textStart"
-        android:textColor="@color/grey_500"
-        android:textSize="12sp"
-        android:textStyle=""
-        app:cornerRadius="@dimen/space_small"
-        app:drawableTint="@color/grey_500"
-        app:fontFamily="@font/poppins_regular"
-        app:layout_constraintBottom_toBottomOf="@id/v_header"
-        app:layout_constraintEnd_toEndOf="@id/v_header"
-        app:layout_constraintStart_toStartOf="@id/v_header"
-        app:layout_constraintTop_toTopOf="@id/v_header"
-        app:strokeColor="@color/grey_500"
-        app:textAllCaps="false" />
+        <View
+            android:id="@+id/v_header"
+            android:layout_width="match_parent"
+            android:layout_height="62dp"
+            android:background="@color/blue_500"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_interest"
-        style="@style/TextContent.Highlight"
-        android:layout_marginStart="@dimen/space_normal"
-        android:layout_marginTop="@dimen/space_small"
-        android:text="@string/same_interest_with_you"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/v_header" />
+        <Button
+            android:id="@+id/btn_search"
+            style="@style/OutlinedButton"
+            android:layout_marginHorizontal="@dimen/space_normal"
+            android:backgroundTint="@color/grey_200"
+            android:drawableEnd="@drawable/ic_baseline_search_24"
+            android:padding="@dimen/space_extra_small"
+            android:paddingStart="@dimen/space_normal"
+            android:paddingEnd="@dimen/space_normal"
+            android:text="@string/find_your_friend_by_id_here"
+            android:textAlignment="textStart"
+            android:textColor="@color/grey_500"
+            android:textSize="12sp"
+            android:textStyle=""
+            app:cornerRadius="@dimen/space_small"
+            app:drawableTint="@color/grey_500"
+            app:fontFamily="@font/poppins_regular"
+            app:layout_constraintBottom_toBottomOf="@id/v_header"
+            app:layout_constraintEnd_toEndOf="@id/v_header"
+            app:layout_constraintStart_toStartOf="@id/v_header"
+            app:layout_constraintTop_toTopOf="@id/v_header"
+            app:strokeColor="@color/grey_500"
+            app:strokeWidth="@dimen/space_tiny"
+            app:textAllCaps="false" />
 
-    <Button
-        style="@style/OutlinedButton.Inline"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="@dimen/space_normal"
-        android:text="@string/find_others_here"
-        android:textColor="@color/orange_500"
-        android:textSize="12sp"
-        android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
-        app:layout_constraintTop_toBottomOf="@id/tv_interest"
-        app:drawableTint="@color/orange_500"/>
+        <TextView
+            android:id="@+id/tv_interest"
+            style="@style/TextContent.Highlight"
+            android:layout_marginStart="@dimen/space_normal"
+            android:layout_marginTop="@dimen/space_small"
+            android:text="@string/same_interest_with_you"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/v_header" />
 
+        <Button
+            android:id="@+id/btn_others"
+            style="@style/OutlinedButton.Inline"
+            android:layout_marginEnd="@dimen/space_normal"
+            android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
+            android:text="@string/find_others_here"
+            android:textColor="@color/orange_500"
+            android:paddingStart="@dimen/space_normal"
+            android:paddingEnd="0dp"
+            android:textSize="16sp"
+            app:drawableTint="@color/orange_500"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_interest" />
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_word"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/space_normal"
+            android:layout_marginTop="@dimen/space_normal"
+            android:foreground="?attr/selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true"
+            app:cardCornerRadius="@dimen/space_small"
+            app:cardElevation="@dimen/space_extra_small"
+            app:layout_constraintTop_toBottomOf="@id/btn_others">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    style="@style/TextContent.Highlight"
+                    android:layout_width="match_parent"
+                    android:layout_marginHorizontal="@dimen/space_normal"
+                    android:layout_marginTop="@dimen/space_normal"
+                    android:text="@string/today_s_word" />
+
+                <TextView
+                    style="@style/TextContent.Highlight"
+                    android:layout_width="match_parent"
+                    android:layout_marginHorizontal="@dimen/space_normal"
+                    android:layout_marginTop="@dimen/space_small"
+                    android:text="@string/app_name"
+                    android:textAlignment="center"
+                    android:textColor="@color/blue_500"
+                    android:textSize="18sp" />
+
+                <TextView
+                    style="@style/TextContent"
+                    android:layout_width="match_parent"
+                    android:layout_marginHorizontal="@dimen/space_normal"
+                    android:layout_marginTop="@dimen/space_small"
+                    android:layout_marginBottom="@dimen/space_normal"
+                    android:text="It's a mobile based app for learning foreign language by practicing chat with others."
+                    android:textColor="@color/grey_500" />
+
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_article"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/space_normal"
+            android:layout_marginTop="@dimen/space_normal"
+            android:layout_marginBottom="@dimen/space_large"
+            android:foreground="?attr/selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true"
+            app:cardCornerRadius="@dimen/space_small"
+            app:cardElevation="@dimen/space_extra_small"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cv_word">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    style="@style/TextContent.Highlight"
+                    android:layout_width="match_parent"
+                    android:layout_marginHorizontal="@dimen/space_normal"
+                    android:layout_marginTop="@dimen/space_normal"
+                    android:text="@string/new_insight" />
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="180dp"
+                    android:layout_marginHorizontal="@dimen/space_normal"
+                    android:layout_marginTop="@dimen/space_small"
+                    android:src="@color/blue_500"
+                    app:cornerRadius="@dimen/space_normal" />
+
+                <TextView
+                    style="@style/TextContent.Highlight"
+                    android:layout_width="match_parent"
+                    android:layout_marginHorizontal="@dimen/space_normal"
+                    android:layout_marginTop="@dimen/space_small"
+                    android:text="Grammar for Baby"
+                    android:textAlignment="textStart"
+                    android:textColor="@color/blue_500"
+                    android:textSize="18sp" />
+
+                <TextView
+                    style="@style/TextContent"
+                    android:layout_width="match_parent"
+                    android:layout_marginHorizontal="@dimen/space_normal"
+                    android:layout_marginTop="@dimen/space_extra_small"
+                    android:ellipsize="end"
+                    android:maxLines="3"
+                    android:text="Grammar for baby is a lorem ipsum dolor sit amet adipisicid keyboard smash is amdaflijadla kfsdaf is a fishing rod with a sailor in the night sadf safsdf"
+                    android:textColor="@color/grey_500" />
+
+                <Button
+                    android:id="@+id/btn_read_more"
+                    style="@style/OutlinedButton.Inline"
+                    android:layout_width="match_parent"
+                    android:layout_marginHorizontal="@dimen/space_normal"
+                    android:layout_marginBottom="@dimen/space_small"
+                    android:background="@color/white"
+                    android:clickable="false"
+                    android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
+                    android:focusable="false"
+                    android:gravity="center"
+                    android:text="@string/click_to_read_more"
+                    android:textColor="@color/orange_500"
+                    android:textSize="14sp"
+                    app:drawableTint="@color/orange_500" />
+
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
