Change click to read more text size to 16 sp; Add bottom navigation

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -39,7 +39,7 @@
             app:layout_constraintStart_toStartOf="@id/v_header"
             app:layout_constraintTop_toTopOf="@id/v_header"
             app:strokeColor="@color/grey_500"
-            app:strokeWidth="@dimen/space_tiny"
+            app:strokeWidth="1dp"
             app:textAllCaps="false" />
 
         <TextView
@@ -56,10 +56,10 @@
             style="@style/OutlinedButton.Inline"
             android:layout_marginEnd="@dimen/space_normal"
             android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
-            android:text="@string/find_others_here"
-            android:textColor="@color/orange_500"
             android:paddingStart="@dimen/space_normal"
             android:paddingEnd="0dp"
+            android:text="@string/find_others_here"
+            android:textColor="@color/orange_500"
             android:textSize="16sp"
             app:drawableTint="@color/orange_500"
             app:layout_constraintEnd_toEndOf="parent"
@@ -71,11 +71,11 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/space_normal"
             android:layout_marginTop="@dimen/space_normal"
-            android:foreground="?attr/selectableItemBackground"
             android:clickable="true"
             android:focusable="true"
+            android:foreground="?attr/selectableItemBackground"
             app:cardCornerRadius="@dimen/space_small"
-            app:cardElevation="@dimen/space_extra_small"
+            app:cardElevation="@dimen/space_tiny"
             app:layout_constraintTop_toBottomOf="@id/btn_others">
 
             <LinearLayout
@@ -119,11 +119,11 @@
             android:layout_marginHorizontal="@dimen/space_normal"
             android:layout_marginTop="@dimen/space_normal"
             android:layout_marginBottom="@dimen/space_large"
-            android:foreground="?attr/selectableItemBackground"
             android:clickable="true"
             android:focusable="true"
+            android:foreground="?attr/selectableItemBackground"
             app:cardCornerRadius="@dimen/space_small"
-            app:cardElevation="@dimen/space_extra_small"
+            app:cardElevation="@dimen/space_tiny"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cv_word">
 
