--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -7,13 +7,24 @@
     android:layout_height="match_parent"
     tools:context=".form.PersonalFragment">
 
+    <Button
+        android:id="@+id/btn_logout"
+        style="@style/OutlinedButton.Inline"
+        android:layout_marginStart="@dimen/space_normal"
+        android:layout_marginTop="@dimen/space_small"
+        android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
+        android:text="@string/logout"
+        app:drawableTint="@color/blue_500"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageButton
         android:id="@+id/avatar"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:background="@drawable/ic_account_circle_24px"
         android:layout_marginTop="@dimen/space_extra_large"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/btn_logout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
     
@@ -37,61 +48,91 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <EditText
-        android:id="@+id/et_name"
+        android:id="@+id/et_username"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:inputType="text"
+        style="@style/EditText"
+        android:background="@drawable/edit_text_background"
         android:layout_marginHorizontal="@dimen/space_normal"
         android:layout_marginTop="@dimen/space_normal"
-        android:backgroundTint="@color/grey_500"
-        android:hint="@string/enter_your_name"
-        android:textSize="14sp"
+        android:hint="@string/enter_your_username"
         app:layout_constraintTop_toBottomOf="@id/tv_profile"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <EditText
+        android:id="@+id/et_fullname"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        style="@style/EditText"
+        android:background="@drawable/edit_text_background"
+        android:layout_marginHorizontal="@dimen/space_normal"
+        android:layout_marginTop="@dimen/space_normal"
+        android:hint="@string/enter_your_full_name"
+        app:layout_constraintTop_toBottomOf="@id/et_username"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
         android:id="@+id/et_birthday"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        style="@style/EditText"
+        android:background="@drawable/edit_text_background"
         android:layout_marginHorizontal="@dimen/space_normal"
         android:layout_marginTop="@dimen/space_normal"
-        android:backgroundTint="@color/grey_500"
         android:hint="@string/enter_your_birthday"
-        android:textSize="14sp"
-        app:layout_constraintTop_toBottomOf="@id/et_name"
+        app:layout_constraintTop_toBottomOf="@id/et_fullname"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <ImageButton
-        android:id="@+id/calendar"
+        android:id="@+id/im_calendar"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:background="@drawable/ic_baseline_calendar_month_24"
+        android:layout_marginEnd="12dp"
         app:layout_constraintTop_toTopOf="@id/et_birthday"
         app:layout_constraintBottom_toBottomOf="@id/et_birthday"
         app:layout_constraintRight_toRightOf="@id/et_birthday"/>
 
-    <EditText
+<!--    <EditText-->
+<!--        android:id="@+id/et_gender"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        style="@style/EditText"-->
+<!--        android:background="@drawable/edit_text_background"-->
+<!--        android:layout_marginHorizontal="@dimen/space_normal"-->
+<!--        android:layout_marginTop="@dimen/space_normal"-->
+<!--        android:hint="@string/enter_your_gender"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/et_birthday"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"/>-->
+
+
+<!--    <ImageButton-->
+<!--        android:id="@+id/dropdown"-->
+<!--        android:layout_width="24dp"-->
+<!--        android:layout_height="24dp"-->
+<!--        android:background="@drawable/ic_baseline_arrow_drop_down_24"-->
+<!--        android:layout_marginEnd="12dp"-->
+<!--        app:layout_constraintTop_toTopOf="@id/et_gender"-->
+<!--        app:layout_constraintBottom_toBottomOf="@id/et_gender"-->
+<!--        app:layout_constraintRight_toRightOf="@id/et_gender"/>-->
+
+    <Spinner
         android:id="@+id/et_gender"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/space_normal"
         android:layout_marginTop="@dimen/space_normal"
-        android:backgroundTint="@color/grey_500"
-        android:hint="@string/enter_your_gender"
-        android:textSize="14sp"
+        app:strokeWidth="1dp"
+        app:strokeColor="@color/grey_500"
         app:layout_constraintTop_toBottomOf="@id/et_birthday"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
-
-    <ImageButton
-        android:id="@+id/dropdown"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:background="@drawable/ic_baseline_arrow_drop_down_24"
-        app:layout_constraintTop_toTopOf="@id/et_gender"
-        app:layout_constraintBottom_toBottomOf="@id/et_gender"
-        app:layout_constraintRight_toRightOf="@id/et_gender"/>
 
     <Button
         android:id="@+id/btn_next"
@@ -99,6 +140,7 @@
         android:layout_marginHorizontal="@dimen/space_normal"
         android:layout_marginTop="@dimen/space_large"
         android:text="@string/next"
+        app:cornerRadius="@dimen/space_normal"
         app:layout_constraintTop_toBottomOf="@+id/et_gender"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
