--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,6 +3,7 @@
     <string-array name="preloaded_fonts">preload_fonts</string-array>
     <string-array name="com_google_android_gms_fonts_certs">fonts_cerst</string-array>
     <string-array name="gender_list">
+        <item>@string/enter_your_gender</item>
         <item>Male</item>
         <item>Female</item>
     </string-array>
