--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -7,8 +7,13 @@
         <item>Male</item>
         <item>Female</item>
     </string-array>
-    <string-array name="language_list">
-        <item>Select your language</item>
+    <string-array name="native_language_list">
+        <item>Native language</item>
+        <item>Indonesia</item>
+        <item>English</item>
+    </string-array>
+    <string-array name="learn_language_list">
+        <item>Language you want to learn</item>
         <item>Indonesia</item>
         <item>English</item>
     </string-array>
