add scrollview to form page

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -13,7 +13,7 @@
         <item>English</item>
     </string-array>
     <string-array name="learn_language_list">
-        <item>Language you want to learn</item>
+        <item>Learning language</item>
         <item>Indonesia</item>
         <item>English</item>
     </string-array>
