--- a/app/src/main/res/layout/fragment_language.xml
+++ b/app/src/main/res/layout/fragment_language.xml
@@ -75,7 +75,7 @@
             android:id="@+id/btn_save"
             style="@style/Button.Big"
             android:layout_marginHorizontal="@dimen/space_normal"
-            android:layout_marginTop="@dimen/space_extra_large"
+            android:layout_marginVertical="@dimen/space_extra_large"
             android:text="@string/save"
             app:cornerRadius="@dimen/space_normal"
             app:layout_constraintTop_toBottomOf="@+id/et_learn"
