--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="grey_500">#FF7E8DA6</color>
     <color name="grey_300">#FFC6CAD5</color>
     <color name="grey_200">#FFF2F3F7</color>
+    <color name="red_500">#FFF85A53</color>
 </resources>
