--- a/app/src/main/res/layout/activity_recommendations.xml
+++ b/app/src/main/res/layout/activity_recommendations.xml
@@ -42,7 +42,8 @@
         android:id="@+id/rv_chips"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/space_small"
+        android:paddingVertical="@dimen/space_small"
+        android:layout_marginStart="@dimen/space_normal"
         tools:listitem="@layout/chips_item"
         tools:itemCount="1"
         app:layout_constraintTop_toBottomOf="@id/cv_header"/>
